@@ -1571,6 +1571,22 @@ operator|==
 literal|null
 condition|)
 block|{
+name|int
+name|bucketSize
+init|=
+name|HiveConf
+operator|.
+name|getIntVar
+argument_list|(
+name|hconf
+argument_list|,
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HIVEMAPJOINBUCKETCACHESIZE
+argument_list|)
+decl_stmt|;
 name|res
 operator|=
 name|getRowContainer
@@ -1587,7 +1603,7 @@ index|[
 name|tag
 index|]
 argument_list|,
-name|joinCacheSize
+name|bucketSize
 argument_list|)
 expr_stmt|;
 name|res
@@ -1776,6 +1792,13 @@ argument_list|,
 name|res
 argument_list|)
 decl_stmt|;
+name|valueObj
+operator|.
+name|setConf
+argument_list|(
+name|hconf
+argument_list|)
+expr_stmt|;
 name|valueObj
 operator|.
 name|setConf
